<resources>
    <string name="app_name">SpendingControl</string>

    <!-- Login Activity -->
    <string name="img_logo">Spending Control Logo</string>
    <string name="etLogin">Digite o seu email</string>
    <string name="etPassword">Digite a sua senha</string>
    <string name="btnLogin">Acessar</string>
    <string name="btnRegister">Registrar-se</string>

    <!-- Register Activity -->
    <string name="img_register">Register new account</string>
    <string name="etName">Digite o seu nome</string>
    <string name="etConfirmPassword">Confirme a sua senha</string>
    <string name="btnConfirmRegister">Confirmar o cadastro</string>

    <!-- Main Activity -->
    <string name="txtWelcome">Seja bem-vindo(a)!</string>
    <string name="txtBalance">O seu saldo atual é de:</string>
    <string name="txtBalanceNumber">0</string>

    <!-- Menu -->
    <string name="stringExit">Sair</string>

    <!-- Details Activity -->
    <string name="btnDelete">Deletar</string>

    <!-- Add New Spend Activity -->
    <string name="btnSave">Salvar</string>
    <string name="etTitle">Digite o título</string>
    <string name="etDescription">Digite a descrição</string>
    <string name="etValue">Digite o valor</string>

    <string-array name="type_array">
        <item>Crédito</item>
        <item>Débito</item>
    </string-array>
</resources>
